--- a/package.json
+++ b/package.json
@@ -1,20 +1,5 @@
-{ "name": "ui-challenge",
-  "version": "0.1.0",
-  "private": true,
+{
   "devDependencies": {
-    "browser-sync": "^2.18.12",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.6",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-jshint": "^2.0.4",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-notify": "^3.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev": "^7.1.2",
-    "gulp-uglify": "^3.0.0",
-    "gulp-usemin": "^0.3.28",
-    "jshint-stylish": "^2.2.1"
+    "webpack": "^3.3.0"
   }
 }
