--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "gulp": "^3.9.1",
+    "gulp-cond": "^1.0.0",
+    "gulp-eslint": "^4.0.0",
+    "gulp-insert-lines": "0.0.4",
+    "gulp-mocha": "^4.3.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-util": "^3.0.8",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
   },
