--- a/package.json
+++ b/package.json
@@ -23,8 +23,19 @@
     "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-util": "^3.0.8",
+    "node-sass": "^4.5.3",
+    "open": "0.0.5",
+    "resolve-url-loader": "^2.1.0",
+    "run-sequence": "^2.0.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-stream": "^3.2.0",
+    "yargs": "^8.0.2"
   },
   "dependencies": {
     "react": "^15.6.1",
