--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "yargs": "^8.0.2"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.6.3",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
+    "react-router": "3.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   }
