--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "compression": "^1.7.0",
     "css-loader": "^0.28.4",
+    "del": "^3.0.0",
     "eslint": "^4.2.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.1.0",
