--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-google-maps": "^7.1.0",
     "react-redux": "^5.0.5",
     "react-router": "3.0.0",
     "redux": "^3.7.2",
