--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "chai": "^4.1.0",
     "cheerio": "^0.22.0",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "cross-env": "^2.0.0",
     "css-loader": "^0.24.0",
+    "enzyme": "^2.9.1",
     "eslint": "^3.4.0",
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-react": "^6.1.2",
@@ -50,6 +52,7 @@
     "nodemon": "^1.10.2",
     "npm-run-all": "^3.0.0",
     "open": "0.0.5",
+    "react-addons-test-utils": "^15.6.0",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
